--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
           go-version: '1.25.6'
 
       - name: Build
-        run: go build -v ./cmd/quake-alert
+        run: go build -v ./cmd/disaster-alert
 
       - name: Build for ARM64 (Raspberry Pi)
-        run: GOOS=linux GOARCH=arm64 go build -v -o quake-alert-arm64 ./cmd/quake-alert
+        run: GOOS=linux GOARCH=arm64 go build -v -o quake-alert-arm64 ./cmd/disaster-alert
