--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "50051:50051"
     volumes:
       - ./data:/app/data
+      - /etc/localtime:/etc/localtime:ro
     logging:
       driver: json-file
       options:
@@ -21,6 +22,7 @@ services:
       - GDACS_ENABLED=true
       - GDACS_POLL_INTERVAL=5m
       - LOG_LEVEL=info
+      - TZ=America/Los_Angeles
     networks:
       - disaster-alerts-net
 
